--- a/styles/css/main.css
+++ b/styles/css/main.css
@@ -477,7 +477,7 @@ footer {
   opacity: 0.5;
   z-index: 98; }
 
-.home-page > * {
+.home-page > *, .video-page > * {
   font-family: roboto; }
 
 .video-section {
@@ -1396,6 +1396,9 @@ footer {
                 background-color: white;
                 color: #606060;
                 left: 27.5%; }
+
+.video-page .video-section .video-player .player {
+  width: 100%; }
 
 * {
   scroll-behavior: smooth;
