--- a/styles/sass/layout/_content.scss
+++ b/styles/sass/layout/_content.scss
@@ -8,7 +8,7 @@
     opacity: 0.5;
     z-index: 98;
 }
-.home-page {
+.home-page, .video-page {
     &>* {
         font-family: $main-font-family;
     }
